# teensy-emu

./: meson.build  org.boutemeur.teemu3.json
data/: meson.build  org.boutemeur.teemu3.appdata.xml.in  org.boutemeur.teemu3.desktop.in  org.boutemeur.teemu3.gschema.xml
po/: POTFILES  meson.build
src/: main.cpp  meson.build  teemu3-window.cpp  teemu3-window.h  teemu3-window.ui  teemu3.gresource.xml  teensy_emu.cpp  teensy_emu.h
